--- a/src/events/2024.yaml
+++ b/src/events/2024.yaml
@@ -480,6 +480,7 @@
     - christopher-goes
     - peter-van-valkenburgh
     - fatemeh-fannizadeh
+    - matthew-hodgson
 
 - id: w3pn-berlin-2024
   name: Web3Privacy Now Berlin 2024
