add joerg platzer twitter & pp0 twitter

--- a/src/people/people.yaml
+++ b/src/people/people.yaml
@@ -448,6 +448,8 @@
   img: joerg-platzer.jpeg
   desc: |
     Hacktivist, founding member of the Crypto Economics Consulting Group. (hcpp16)
+  refs:
+    twitter: bitcred
 
 - id: frank-braun
   name: Frank Braun
