add nestatni penize series

--- a/src/people/people.yaml
+++ b/src/people/people.yaml
@@ -417,6 +417,9 @@
   img: josef-tetek.jpg
   refs:
     twitter: JosefTetek
+  roles:
+    - project: nestatni-penize
+      type: contributor
 
 - id: juraj-karpis
   name: Juraj Karpiš
