--- a/src/structures/winprivacy/index.yaml
+++ b/src/structures/winprivacy/index.yaml
@@ -1,9 +1,9 @@
-name: Women in web3 Privacy
+name: Women in Web3 Privacy
 labels:
   - community
 img: ww3p.jpg
 refs:
-  web: https://www.womeninweb3privacy.com/
-  twitter: WWeb3Privacy
+  web: https://winprivacy.org/
+  twitter: winprivacy
 caption: |
   Empowering women, especially in vulnerable communities, with the knowledge and tools to protect their privacy, ensuring safety, autonomy, and confidence in navigating digital and decentralized spaces.
